--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -123,6 +123,25 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
     </li>
     </ul>
     </p>
+    
+    <h4>SQLite</h4>
+    <p>
+    For this workshop we're going to use the Firefox SQLite Plugin. It works through
+    the web browser Firefox. 
+    <ul>
+    <li>If you don't already have Firefox installed 
+    <a href=https://www.mozilla.org/en-US/firefox/new/>install Firefox</a>
+    <li>Start Firefox      
+    <li>Go to the <a href="https://addons.mozilla.org/en-US/firefox/addon/sqlite-manager/">plugin homepage</a>.
+    <li> Click the "Add Now" button.
+    <li> Click "Install Now" on the dialog that appears after the download completes.
+    <li> Restart Firefox when prompted.
+    <li> Select "SQLite Manager" from the "Tools" menu and it will open within Firefox
+    </ul>
+    </p>
+    
+    
+    
   </div>
 </div>
 
