--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -44,6 +44,11 @@
       (e.g. ANT and CMake) they share the same fundamental concepts as
       Make. 
     </p>
+    <h4>Databases and SQL</h4>
+    <p>
+      SQL is a special-purpose language for describing operations on relational databases - 
+      a collection of data organised into tables.
+    </p>
   </div>
 </div>
 
@@ -70,23 +75,6 @@
       <a href="http://msysgit.github.io/">the installer</a>.
       This will provide you with both Git and Bash in the Git Bash program.
     </p>
-    <h4>Software Carpentry Installer</h4>
-    <p>This installer requires an active internet connection</p>
-    <p>After installing Python and Git Bash:</p>
-    <ul>
-      <li>
-        Download the <a href="{{site.windows_installer_path}}">installer</a>.
-      </li>
-      <li>
-        If the file opens directly in the browser select <strong>File&rarr;Save Page As</strong>
-        to download it to your computer.
-      </li>
-      <li>
-        Double click on the file to run it.
-      </li>
-    </ul>
-  </div>
-  <div class="span6">
     <h4>Python</h4>
     <ul>
       <li>
@@ -98,6 +86,11 @@
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
     </ul>
+    
+    
+  </div>
+  <div class="span6">
+
     <h4>Make</h4>
     <p>
     Once you have installed Git Bash you can install Make by:
@@ -174,9 +167,7 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
       here</a>. Use the Leopard installer for 10.5 and the Snow Leopard
       installer for 10.6-10.7.
     </p>
-  </div>
-  <div class="span6">
-    <h4>Python</h4>
+        <h4>Python</h4>
     <ul>
       <li>
         Download and install <a href="https://store.continuum.io/cshop/anaconda/">Anaconda</a>.
@@ -187,6 +178,9 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
     </ul>
+  </div>
+  <div class="span6">
+
     <h4>Make</h4>
     <p>
     For OS X, version 10.9 (Mavericks) or above, download the Command Line
@@ -221,6 +215,24 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
     <p>
     You will now be able to run <code>make</code> within your shell.
     </p>
+    
+        <h4>SQLite</h4>
+    <p>
+    For this workshop we're going to use the Firefox SQLite Plugin. It works through
+    the web browser Firefox. 
+    <ul>
+    <li>If you don't already have Firefox installed 
+    <a href=https://www.mozilla.org/en-US/firefox/new/>install Firefox</a>
+    <li>Start Firefox      
+    <li>Go to the <a href="https://addons.mozilla.org/en-US/firefox/addon/sqlite-manager/">plugin homepage</a>.
+    <li> Click the "Add Now" button.
+    <li> Click "Install Now" on the dialog that appears after the download completes.
+    <li> Restart Firefox when prompted.
+    <li> Select "SQLite Manager" from the "Tools" menu and it will open within Firefox
+    </ul>
+    </p>
+    
+    
   </div>
 </div>
 
@@ -247,9 +259,7 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
       to install it via your distro's package manager
       (e.g. <code>apt-get</code> or <code>yum</code>).
     </p>
-  </div>
-  <div class="span6">
-    <h4>Python</h4>
+        <h4>Python</h4>
     <p>
       We recommend the all-in-one scientific Python installer
       <a href="http://continuum.io/downloads.html">Anaconda</a>.
@@ -282,11 +292,30 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         distribution the default Python).
       </li>
     </ol>
+  </div>
+  <div class="span6">
+
     <h4>Make</h4>
     <p>
     Make is a standard tool on Linux systems and should already be
     available.
     </p>
+           <h4>SQLite</h4>
+    <p>
+    For this workshop we're going to use the Firefox SQLite Plugin. It works through
+    the web browser Firefox. 
+    <ul>
+    <li>If you don't already have Firefox installed 
+    <a href=https://www.mozilla.org/en-US/firefox/new/>install Firefox</a>
+    <li>Start Firefox      
+    <li>Go to the <a href="https://addons.mozilla.org/en-US/firefox/addon/sqlite-manager/">plugin homepage</a>.
+    <li> Click the "Add Now" button.
+    <li> Click "Install Now" on the dialog that appears after the download completes.
+    <li> Restart Firefox when prompted.
+    <li> Select "SQLite Manager" from the "Tools" menu and it will open within Firefox
+    </ul>
+    </p>
+    
   </div>
 </div>
 
@@ -311,3 +340,19 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
     and loading the <code>.ova</code> file.
   </li>
 </ol>
+       <h4>SQLite</h4>
+    <p>
+    For this workshop we're going to use the Firefox SQLite Plugin. It works through
+    the web browser Firefox. 
+    <ul>
+    <li>If you don't already have Firefox installed 
+    <a href=https://www.mozilla.org/en-US/firefox/new/>install Firefox</a>
+    <li>Start Firefox      
+    <li>Go to the <a href="https://addons.mozilla.org/en-US/firefox/addon/sqlite-manager/">plugin homepage</a>.
+    <li> Click the "Add Now" button.
+    <li> Click "Install Now" on the dialog that appears after the download completes.
+    <li> Restart Firefox when prompted.
+    <li> Select "SQLite Manager" from the "Tools" menu and it will open within Firefox
+    </ul>
+    </p>
+    
