--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -85,6 +85,9 @@
         <em>except</em>
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
+      <li>
+        Note: Remember to choose Python <strong>version 2.7</strong> if/when prompted (not version 3.x).
+      </li>
     </ul>
     
     
@@ -176,6 +179,9 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         Use all of the defaults for installation
         <em>except</em>
         make sure to check <strong>Make Anaconda the default Python</strong>.
+      </li>
+      <li>
+        Note: Remember to choose Python <strong>version 2.7</strong> if/when prompted (not version 3.x).
       </li>
     </ul>
   </div>
@@ -290,6 +296,9 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         press enter to prepend Anaconda to
         your <code>PATH</code> (this makes the Anaconda
         distribution the default Python).
+      </li>
+      <li>
+        Note: Remember to choose Python <strong>version 2.7</strong> if/when prompted (not version 3.x).
       </li>
     </ol>
   </div>
