--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -29,8 +29,7 @@
     <p>
       Python is becoming very popular in scientific computing,
       and it's a great language for teaching general programming concepts due to its easy-to-read syntax.
-      We teach with Python version 3,
-      since it is still the most widely used.
+      We teach with Python version 3.
       Installing all the scientific packages for Python individually can be a bit difficult,
       so we recommend an all-in-one installer.
     </p>
@@ -86,7 +85,7 @@
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
       <li>
-        Note: Remember to choose Python <strong>version 2.7</strong> if/when prompted (not version 3.x).
+        Note: Remember to choose Python <strong>version 3</strong> if/when prompted (not version 3.x).
       </li>
     </ul>
     
@@ -181,7 +180,7 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
       <li>
-        Note: Remember to choose Python <strong>version 2.7</strong> if/when prompted (not version 3.x).
+        Note: Remember to choose Python <strong>version 3</strong> if/when prompted (not version 3.x).
       </li>
     </ul>
   </div>
@@ -298,7 +297,7 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         distribution the default Python).
       </li>
       <li>
-        Note: Remember to choose Python <strong>version 2.7</strong> if/when prompted (not version 3.x).
+        Note: Remember to choose Python <strong>version 3</strong> if/when prompted (not version 3.x).
       </li>
     </ol>
   </div>
