--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -85,7 +85,7 @@
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
       <li>
-        Note: Remember to choose Python <strong>version 3</strong> if/when prompted (not version 3.x).
+        Note: Remember to choose Python <strong>version 3</strong> if/when prompted.
       </li>
     </ul>
     
@@ -180,7 +180,7 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
       <li>
-        Note: Remember to choose Python <strong>version 3</strong> if/when prompted (not version 3.x).
+        Note: Remember to choose Python <strong>version 3</strong> if/when prompted.
       </li>
     </ul>
   </div>
@@ -297,7 +297,7 @@ href="https://github.com/msysgit/msysgit/blob/master/bin/make.exe?raw=true">here
         distribution the default Python).
       </li>
       <li>
-        Note: Remember to choose Python <strong>version 3</strong> if/when prompted (not version 3.x).
+        Note: Remember to choose Python <strong>version 3</strong> if/when prompted.
       </li>
     </ol>
   </div>
